# dogcat

./: .gitattributes  .gitignore  .stylelintrc.json  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  benchmark.py  dcat.py  eslint.config.js  jsconfig.json  justfile  package.json  pnpm-lock.yaml  pyproject.toml  tabcomp.py  tox.ini  vulture_whitelist.py
.claude/agents/: git-commit-craft.md
.dogcats/: config.toml  inbox.jsonl  issues.jsonl
.dogcats/archive/: closed-2026-02-18T08-06-18.jsonl  closed-2026-02-28T22-44-24.jsonl  inbox-closed-2026-02-28T22-44-24.jsonl
.github/workflows/: ci.yml  publish.yml  release.yml  validate-issues.yml
docs/: merge-coverage.md
scripts/: release-prep
src/dogcat/: __init__.py  __main__.py  _compaction.py  _diff.py  _id_resolve.py  _indexes.py  _jsonl_io.py  _schema.py  app.py  cli.py  config.py  constants.py  demo.py  deps.py  edit.py  event_log.py  feature_flags.py  git.py  idgen.py  inbox.py  locking.py  merge_driver.py  migrate.py  models.py  storage.py  stream.py  utils.py
src/dogcat/cli/: __init__.py  _cmd_admin.py  _cmd_archive.py  _cmd_cache.py  _cmd_chart.py  _cmd_close.py  _cmd_comment.py  _cmd_config.py  _cmd_create.py  _cmd_demo.py  _cmd_dep.py  _cmd_diff.py  _cmd_docs.py  _cmd_doctor.py  _cmd_example_md.py  _cmd_features.py  _cmd_graph.py  _cmd_history.py  _cmd_inbox.py  _cmd_init.py  _cmd_label.py  _cmd_maintenance.py  _cmd_propose.py  _cmd_read.py  _cmd_rename_namespace.py  _cmd_reopen.py  _cmd_search.py  _cmd_stale.py  _cmd_tui.py  _cmd_update.py  _cmd_web.py  _cmd_workflow.py  _completions.py  _formatting.py  _helpers.py  _json_state.py  _tui_app.py  _validate.py
src/dogcat/tui/: __init__.py  dashboard.py  detail.py  detail_panel.py  editor.py  picker.py  shared.py
src/dogcat/web/: __init__.py
src/dogcat/web/propose/: __init__.py  routes.py
src/dogcat/web/propose/templates/: propose.html
src/dogcat/web/static/css/: propose.css
src/dogcat/web/static/js/: propose.js
tests/: cli_test_helpers.py  conftest.py  generate_fixture.py  test_archivable_partition.py  test_archive.py  test_backfill.py  test_benchmark.py  test_cli_coverage.py  test_cli_helpers.py  test_cmd_cache.py  test_cmd_chart.py  test_cmd_close.py  test_cmd_comment.py  test_cmd_config.py  test_cmd_create.py  test_cmd_diff.py  test_cmd_doctor.py  test_cmd_example_md.py  test_cmd_graph.py  test_cmd_history.py  test_cmd_inbox.py  test_cmd_init.py  test_cmd_label.py  test_cmd_list.py  test_cmd_misc.py  test_cmd_namespace.py  test_cmd_propose.py  test_cmd_random.py  test_cmd_repair_jsonl.py  test_cmd_search_helpers.py  test_cmd_show.py  test_cmd_snooze.py  test_cmd_stale.py  test_cmd_update.py  test_cmd_workflow.py  test_compaction_indexes.py  test_compaction_merge.py  test_completions.py  test_config.py  test_constants.py  (+61 more)
tests/fixtures/: v0.1.0_issues.jsonl  v0.1.1_issues.jsonl  v0.1.2_issues.jsonl  v0.1.3_issues.jsonl  v0.1.4_issues.jsonl  v0.1.5_issues.jsonl  v0.1.6_issues.jsonl  v0.1.7_issues.jsonl  v0.1.8_issues.jsonl  v0.1.9_issues.jsonl  v0.10.1_inbox.jsonl  v0.10.1_issues.jsonl  v0.12.0_inbox.jsonl  v0.12.0_issues.jsonl  v0.2.0_issues.jsonl  v0.3.0_issues.jsonl  v0.4.0_issues.jsonl  v0.5.0_issues.jsonl  v0.6.3_issues.jsonl  v0.8.0_issues.jsonl  v0.9.0_issues.jsonl
